2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* help/eu/eu.po: Added Basque translation.
	* help/Makefile.am: Added 'eu' to DOC_LINGUAS.

==================== 2.25.90 ======================

2009-01-07  Callum McKenzie  <callum@spooky-possum.org>

	* src/Makefile.am: Really fix the build.

==================== 2.25.3 ======================

2009-01-04  Callum McKenzie  <callum@spooky-possum.org>

	* src/Makefile.am: Patch from Matthias Clasen to fix the build
	(bug 565426). This is the same libgnomeui issue that affected the
	default applets (see bug 564192). 

==================== 2.25.2 ======================

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* src/preferences.h: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

2008-09-26  Callum McKenzie  <callum@spooky-possum.org>

	* mini-commander.ui:	
	* mini-commander.glade: Set the page_size to 0 to work around
	recent gtk sensitivity.

==================== 2.24.0.1 ====================

2008-09-20  Simos Xenitellis  <simos@gnome.org>

	* help/el/el.po: Added Greek translation by Ilias Makris.

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* src/command_line.c: Patch from Danny Baumann to set the window
	type hint to assist compositing window managers (see bug #522238).

	* src/GNOME_MiniCommanderApplet.server: Delete from SVN
	control. It should never have been there in the first place.

	* src/preferences.c
	* src/mini-commander.ui	
	* src/Makefile.am: Convert from glade to gtk-builder. Patch from
	Jaap Haitsma (bug #521082).

2008-03-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* help/pt_BR/pt_BR.po: Updated Brazilian Portuguese translation.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* help/ko/*: 
	* help/Makefile.am: Korean manual migrated to gnome-doc-utils from
	the old Sun manual.

2007-07-30  Claude Paroz <claude@2xlibre.net>

	* command_line.c:
	* exec.c: Removed files (moved to src long ago). Fixes bug #459086.
