@@ -1,3 +1,7 @@
+2009-02-17  Callum McKenzie  <callum@spooky-possum.org>
+
+	* src/command_line.c: Replace more deprecated functions.
+
 2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* help/eu/eu.po: Added Basque translation.
